@@ -1,4 +1,5 @@
-<%@ page import="java.io.File"%>
+<%@ page import="java.io.File,
+                 java.util.Calendar"%>
  <%--********************************************************************************
  * CruiseControl, a Continuous Integration Toolkit
  * Copyright (c) 2001, ThoughtWorks, Inc.
@@ -35,33 +36,80 @@
  * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ********************************************************************************--%>
-
-<%-- To Do: Come back and make this look pretty --%>
+<jsp:useBean id="statusHelper" scope="page" class="net.sourceforge.cruisecontrol.StatusHelper" />
 <%
-   String singleProjectMode = application.getInitParameter("singleProject");
-   if (Boolean.valueOf(singleProjectMode).booleanValue()) {
+    String singleProjectMode = application.getInitParameter("singleProject");
+    if (Boolean.valueOf(singleProjectMode).booleanValue()) {
        %><jsp:forward page="buildresults" /><%
-       return;
-   }
+        return;
+    }
+
+    StringBuffer reportTime = new StringBuffer();
+    Calendar now = Calendar.getInstance();
+    reportTime.append(now.get(Calendar.HOUR_OF_DAY));
+    reportTime.append(":");
+    reportTime.append(now.get(Calendar.MINUTE));
+%>
+<html>
+<head>
+  <title>CruiseControl Status Page</title>
+  <base href="<%=request.getScheme()%>://<%=request.getServerName()%>:<%=request.getServerPort()%><%=request.getContextPath()%>/" />
+  <link type="text/css" rel="stylesheet" href="css/cruisecontrol.css"/>
+</head>
+<body background="images/bluebg.gif" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
+<p>&nbsp;</p>
+<h1 class="white" align="center">CruiseControl Status Page</h1>
+<table align="center" border="0" cellpadding="0" cellspacing="0" width="70%">
+<tfoot>
+  <tr><td class="link">listing generated at <%=reportTime.toString()%></td></tr>
+</tfoot>
+<tbody>
+  <tr><td>&nbsp;</td></tr>
+  <tr><td bgcolor="#FFFFFF"><img border="0" src="images/bluestripestop.gif"></td></tr>
+  <tr><td><table class="index" width="100%">
+<%
    String logDirPath = application.getInitParameter("logDir");
    if (logDirPath == null) {
-       %>You need to provide a value for the context parameter <code>&quot;logDir&quot;</code><%
+       %><tr><td>You need to provide a value for the context parameter <code>&quot;logDir&quot;</code></td></tr><%
    } else {
        java.io.File logDir = new java.io.File(logDirPath);
        if (logDir.isDirectory() == false) {
-           %><%=logDirPath%> needs to be a directory.<%
+           %><tr><td>Context parameter logDir needs to be set to a directory. Currently set to &quot;<%=logDirPath%>&quot;</td></tr><%
        } else {
            String[] projectDirs = logDir.list(new java.io.FilenameFilter() {
                public boolean accept(File dir, String name) {
                    return (new File(dir, name).isDirectory());
                }
            });
-           %><ul><%
-           for (int i = 0; i < projectDirs.length; i++) {
-               String project = projectDirs[i];
-               %><li><a href="buildresults/<%=project%>"><%=project%></a></li><%
+
+           if (projectDirs.length == 0) {
+               %><tr><td>no project directories found under <%=logDirPath%></td></tr><%
            }
-           %></ul><%
+           else {
+%>    <thead class="index-header">
+        <tr><td>Project</td><td align="center">Last build result</td><td align="center">Last build time</td></tr>
+    </thead>
+    <tbody>
+ <%
+               for (int i = 0; i < projectDirs.length; i++) {
+                   String project = projectDirs[i];
+                   File projectDir = new File(logDir, project);
+                   statusHelper.setProjectDirectory(projectDir);
+                   final String result = statusHelper.getLastBuildResult();
+         %>        <tr><td><a href="buildresults/<%=project%>"><%=project%></a></td><%
+                 %><td class="index-<%=result%>" align="center"><%=result%></td><%
+                 %><td align="center"><%=statusHelper.getLastBuildTimeString()%></td></tr>
+ <%
+               }
+         %>    </tbody>
+</table><%
+           }
        }
    }
-%>
+%></td></tr>
+  <tr><td bgcolor="#FFFFFF"><img border="0" src="images/bluestripesbottom.gif"></td></tr>
+  <tr><td>&nbsp;</td></tr>
+</tbody>
+</table>
+</body>
+</html>
